--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,7 @@
                 <h4 class="nav__block_name">JavaScript</h4>
                 <ul>
                   <li class="nav__block_list"><a href="../app/rules-js.html" class="nav__block_link">Правила</a></li>
+                  <li class="nav__block_list"><a href="../app/babel.html" class="nav__block_link">Babel</a></li>
                 </ul>
               </div>
             </div>
