--- a/app/rules-jquery.html
+++ b/app/rules-jquery.html
@@ -81,7 +81,17 @@
   </header>
   <!-- End header-->
   <!-- rules-jquery-content-->
-  <main role="main" class="rules-jquery-content"></main>
+  <main role="main" class="rules-jquery-content">
+    <section class="rules-jquery">
+      <div class="container"> 
+        <div class="rules-jquery__content"></div>
+        <h4>Правила</h4>
+        <ul> 
+          <li>В начале файла с функциями добавить функцию document ready function</li>
+        </ul>
+      </div>
+    </section>
+  </main>
   <!-- End rules-jquery-content-->
   <!-- Cookie-->
   <div role="status" class="cookie">
