--- a/app/wp-rules.html
+++ b/app/wp-rules.html
@@ -127,6 +127,20 @@
             <li>Добавить в fuction.php функцию register_nav_menus() и указать названию меню (можно несколько)<a href="https://wp-kama.ru/function/register_nav_menus"> подробнее</a></li>
             <li>Вывести в теме с помощью функции wp_nav_menu <a href="https://wp-kama.ru/function/wp_nav_menu"> подробнее</a></li>
           </ul>
+          <h4>Верстка через Elementor</h4>
+          <ul>
+            <li>Выбираем шаблон страницы Elementor полная ширина</li>
+            <li>Добавление своих шрифтов НЕ в про версии
+              <ul> 
+                <li>Добавить класс с подклченным шрифтом</li>
+                <li>К классу от elementor добавить font-famaly: inherit !important</li>
+              </ul>
+            </li>
+          </ul>
+          <h4>Advanced Custom Fields</h4>
+          <ul>
+            <li> </li>
+          </ul>
         </div>
       </div>
     </section>
