--- a/app/animation-css.html
+++ b/app/animation-css.html
@@ -96,7 +96,7 @@
           </ul>
           <h4>Анимация</h4>
           <ul>
-            <li>@keyframes Имя анимации { список правил }</li>
+            <li>@keyframes имя анимации { список правил }</li>
             <li>@keyframes shadow { <span class="d-block">from {text-shadow: 0 0 3px black;}</span><span class="d-block">50% {text-shadow: 0 0 30px black;}</span><span class="d-block">to {text-shadow: 0 0 3px black;}</span><span class="d-block">}</span></li><i>Ключевые кадры создаются с помощью ключевых слов from и to (эквивалентны значениям 0% и 100%) или с помощью процентных пунктов, которых можно задавать сколько угодно. Также можно комбинировать ключевые слова и процентные пункты.</i>
             <li>После объявления правила @keyframes, мы можем ссылаться на него в свойстве animation:</li>
             <li>h1 {<span class="d-block">font-size: 3.5em;</span><span class="d-block">color: darkmagenta;</span><span class="d-block">animation: shadow  2s infinite ease-in-out;</span><span class="d-block">}</span></li>
